# diesel-aggr-sample

./: .env  .env.sample  Cargo.toml  README.md
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
