[package]
name = "diesel-aggr-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
diesel = { git = "https://github.com/weiznich/diesel", branch = "fix/3156", features = ["postgres", "r2d2"] }
